changing the compiler to 1.8